--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "fileserver",
+  "name": "express-file-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Serveur de fichiers avec Express et redimensionnement d'images",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "express",
+    "file-upload",
+    "image-resize",
+    "sharp"
+  ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.1",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.5",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
