--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.5",
-    "cors": "^2.8.5"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
